--- a/package.json
+++ b/package.json
@@ -9,11 +9,20 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.18.0",
     "dotenv": "^6.0.0",
-    "js-yaml": "^3.12.0"
+    "js-yaml": "^3.12.0",
+    "request": "^2.87.0",
+    "request-promise": "^4.2.2"
   },
   "devDependencies": {
+    "babel-eslint": "^8.2.5",
     "chai": "^4.1.2",
+    "eslint": "^5.1.0",
+    "eslint-config-airbnb": "^17.0.0",
+    "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-jsx-a11y": "^6.1.0",
+    "eslint-plugin-react": "^7.10.0",
     "mocha": "^5.2.0"
   }
 }
